--- a/src/pages/timeline.astro
+++ b/src/pages/timeline.astro
@@ -162,7 +162,7 @@ const items = [
     <BaseHead
       title="2025 at a Glance"
       description="A horizontal, clickable timeline of how 2025 unfolded: GS, Python automation, Guitar mastery, and Web Design."
-      image="/about-lifeloggerz.png"
+      image="/about-lifeloggerz.webp"
     />
   </head>
   <body>
